<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:background="@drawable/ic_blocto_logo"
            android:id="@+id/iv_logo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp" />

        <TextView
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_unplug"
            android:textColor="@color/textcolor"
            android:gravity="center"
            android:textSize="@dimen/_10ssp" />


        <View
            android:id="@+id/view"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <LinearLayout
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:background="@mipmap/ic_launcher"
                android:id="@+id/iv_icon"
                app:layout_constraintTop_toBottomOf="@id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp" />


            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_this_account_on"
                android:textColor="@color/textcolor"
                android:gravity="center"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintTop_toBottomOf="@id/iv_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Some Awesome Flow dApp"
                android:textColor="@color/textcolor"
                android:gravity="center"
                android:textSize="@dimen/_13ssp" />

            <View
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey"

                />

            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/grey"
                android:gravity="center"
                android:textSize="@dimen/_11ssp"
                android:layout_gravity="left" />

            <EditText
                android:id="@+id/et_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/textcolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/grey"
                android:gravity="center"
                android:textSize="@dimen/_11ssp"
                android:layout_gravity="left" />

            <EditText
                android:id="@+id/et_pass"
                android:inputType="numberPassword"
                android:singleLine="true"
                android:textColor="@color/textcolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <Button
                android:layout_marginTop="@dimen/_5sdp"
                android:backgroundTint="@color/blue_bt"
                android:id="@+id/bt_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm" />

            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_another_account"
                android:textColor="@color/blue_bt"
                android:gravity="center"
                android:textSize="@dimen/_12ssp" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>