<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

<!--    <androidx.core.widget.NestedScrollView-->
<!--        android:background="@drawable/splash_back_gradiant"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/splash_back_gradiant"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_left_backarrow" />

        <TextView
            app:layout_constraintTop_toTopOf="@+id/iv_back"
            app:layout_constraintBottom_toBottomOf="@+id/iv_back"
            android:id="@+id/tv_text"
            app:layout_constraintLeft_toRightOf="@+id/iv_back"
            android:letterSpacing="-0.01"
            android:textColor="@color/text_lightwhite"
            android:textSize="@dimen/_28ssp"
            android:text="@string/editProfile"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aquawax_pro_heavy_alt_version" />

        <RelativeLayout
            android:id="@+id/ll_profilepic"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_bottom_nav_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="@dimen/_44sdp"
                android:layout_height="@dimen/_44sdp"
                app:srcCompat="@mipmap/ic_launcher"
                app:roundPercent="1"
                android:id="@+id/iv_user" />

            <TextView
                android:id="@+id/tv_editProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_selectedweek"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/aquawax_pro_heavy_alt_version"
                android:letterSpacing="-0.05"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingRight="@dimen/_16sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:text="@string/editImage"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/ll_name"
            android:padding="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:orientation="vertical"
            android:background="@drawable/bg_bottom_nav_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_profilepic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_name"
            android:textColor="@color/textwhite_light"
            android:fontFamily="@font/aquawax_pro_medium_alt_version"
            android:textSize="@dimen/_10sdp"
            android:text="@string/your_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <EditText
            android:maxLength="15"
            android:singleLine="true"
            android:id="@+id/et_name_"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/aquawax_pro_medium_alt_version"
            android:textSize="@dimen/_12sdp"
            android:text="John Smith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_phonenumber"
            android:padding="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:orientation="vertical"
            android:background="@drawable/bg_bottom_nav_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_phonenumber"
                android:textColor="@color/textwhite_light"
                android:fontFamily="@font/aquawax_pro_medium_alt_version"
                android:textSize="@dimen/_10sdp"
                android:text="@string/your_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <EditText
                android:singleLine="true"
                android:editable="false"
                android:id="@+id/et_phonenumber_"
                android:textColor="@color/textwhite_light"
                android:textStyle="bold"
                android:fontFamily="@font/aquawax_pro_medium_alt_version"
                android:textSize="@dimen/_12sdp"
                android:text="911234567890"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_dob"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:orientation="vertical"
            android:background="@drawable/bg_bottom_nav_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_phonenumber"
            android:padding="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_dob"
                android:textColor="@color/textwhite_light"
                android:fontFamily="@font/aquawax_pro_medium_alt_version"
                android:textSize="@dimen/_10sdp"
                android:text="@string/youremail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <EditText
                android:focusable="false"
                android:inputType="none"
                android:id="@+id/et_dob_"
                android:textColor="@color/textwhite_light"
                android:textStyle="bold"
                android:fontFamily="@font/aquawax_pro_medium_alt_version"
                android:textSize="@dimen/_12sdp"
                android:editable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_updateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/bg_viewmore_text"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/aquawax_pro_heavy_alt_version"
            android:letterSpacing="-0.05"
            android:padding="@dimen/_15sdp"
            android:gravity="center_horizontal"
            android:text="@string/updateProfile"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="@dimen/_12ssp" />

        <ProgressBar
            android:visibility="gone"
            android:indeterminateTint="@color/blue_bt"
            android:id="@+id/progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.8"
            android:layout_marginBottom="@dimen/_25sdp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
<!--    </androidx.core.widget.NestedScrollView>-->
</layout>