<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_back_gradiant"
        tools:context=".MainActivity">

        <com.airbnb.lottie.LottieAnimationView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_rawRes="@raw/wave_animation"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <LinearLayout
            android:id="@+id/ll"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/ic_x"
                android:id="@+id/iv_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp" />

            <TextView
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/a_code_has_been_sent_to"
                android:textColor="@color/white"
                android:gravity="center"
                android:fontFamily="@font/aquawax_pro_medium_alt_version"
                android:textSize="@dimen/_15ssp" />


           <TextView
               android:id="@+id/tv_mobileno"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="+971 9876543210"
                android:textColor="@color/white"
                android:gravity="center"
                android:fontFamily="@font/aquawax_pro_heavy_alt_version"
                android:textSize="@dimen/_21ssp" />



            <com.wxrk.utils.EditTextOtp
                android:id="@+id/et_include"
                android:layout_marginRight="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_sendanothertext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="@font/aquawax_pro_regular_alt_version"
                    android:gravity="center"
                    android:text="@string/send_another_code_after_30s"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:layout_toRightOf="@+id/tv_sendanothertext"
                    android:id="@+id/tv_resend"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aquawax_pro_regular_alt_version"
                    android:text="30s"
                    android:textColor="#2DBBDD"
                    android:textSize="@dimen/_10ssp" />

            </RelativeLayout>

        </LinearLayout>



        <LinearLayout
            app:layout_constraintBottom_toTopOf="@id/tv_phonenoui"

            app:layout_constraintWidth_percent="0.8"
            android:layout_width="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/rl_verify"
            android:layout_marginBottom="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_blockto_loginbg"
            >


            <RelativeLayout
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_blockto_loginbg_white"
                >


                <TextView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/tv_textlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/aquawax_pro_heavy_alt_version"
                    android:gravity="center"
                    android:letterSpacing="-0.11"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingRight="@dimen/_20sdp"
                    android:text="@string/verify"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_17ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_textlogin"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/aquawax_pro_medium_alt_version"
                    android:gravity="center"
                    android:letterSpacing="-0.11"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/your_phone_number"
                    android:textColor="#99343434"
                    android:textSize="@dimen/_10ssp" />



            </RelativeLayout>



        </LinearLayout>

        <ProgressBar
            android:visibility="gone"
            android:indeterminateTint="@color/blue_bt"
            android:id="@+id/progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_phonenoui"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.8"
            android:layout_marginBottom="@dimen/_15sdp"
            />



        <TextView
            android:id="@+id/tv_phonenoui"
            android:gravity="center"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/wrong_phone_number"
            android:layout_marginBottom="@dimen/_15sdp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>